changing the color on buttons to try fix bug on iphone

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -91,7 +91,7 @@ button {
         font-size: 1rem;
         font-weight: bold;
         text-align: center;
-        border: 1.5px solid #000000;
+        border: 1.5px solid black;
         padding: 1rem;
         background-color: antiquewhite;
         border-radius: 6px;
